feat: cache classroom domain and app repository impl