@@ -4,7 +4,12 @@ package com.io.codetracker.adapter.classroom.out.persistence.repository;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
+import com.io.codetracker.common.cache.CacheNames;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Caching;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Repository;
 
 import com.io.codetracker.adapter.classroom.out.persistence.mapper.ClassroomAggregateMapper;
@@ -32,13 +37,25 @@ public class ClassroomAppRepositoryImpl implements ClassroomAppRepository {
         this.jpaClassroomRepository = jpaClassroomRepository;
         this.jpaClassroomSettingsRepository = jpaClassroomSettingsRepository;
     }
-    
+
     @Override
+    @Caching(evict = {
+            @CacheEvict(value = CacheNames.CLASSROOM, allEntries = true),
+            @CacheEvict(value = CacheNames.CLASSROOM_BY_ID, key = "#aggregate.classroom.classroomId"),
+            @CacheEvict(value = CacheNames.CLASSROOM_BY_CODE, key = "#aggregate.classroom.classCode"),
+            @CacheEvict(value = CacheNames.CLASSROOM_SETTINGS, key = "#aggregate.classroom.classroomId")
+    })
     public void save(ClassroomAggregate aggregate) {
         jpaClassroomRepository.save(ClassroomAggregateMapper.toEntity(aggregate));
     }
 
     @Override
+    @Caching(evict = {
+            @CacheEvict(value = CacheNames.CLASSROOM, allEntries = true),
+            @CacheEvict(value = CacheNames.CLASSROOM_BY_ID, key = "#aggregate.classroom.classroomId"),
+            @CacheEvict(value = CacheNames.CLASSROOM_BY_CODE, key = "#aggregate.classroom.classCode"),
+            @CacheEvict(value = CacheNames.CLASSROOM_SETTINGS, key = "#aggregate.classroom.classroomId")
+    })
     public void update(ClassroomAggregate aggregate) {
         ClassroomEntity entity = jpaClassroomRepository.findById(aggregate.classroom().getClassroomId())
                 .orElseThrow(() -> new RuntimeException("Classroom not found"));
@@ -53,30 +70,43 @@ public class ClassroomAppRepositoryImpl implements ClassroomAppRepository {
     }
 
     @Override
+    @Caching(evict = {
+            @CacheEvict(value = CacheNames.CLASSROOM, allEntries = true),
+            @CacheEvict(value = CacheNames.CLASSROOM_BY_ID, key = "#classroomId"),
+            @CacheEvict(value = CacheNames.CLASSROOM_BY_CODE, allEntries = true),
+            @CacheEvict(value = CacheNames.CLASSROOM_SETTINGS, key = "#classroomId")
+    })
     public void deleteByClassroomId(UUID classroomId) {
         jpaClassroomRepository.deleteById(classroomId);
     }
 
     @Override
+    @Cacheable(
+            value = CacheNames.CLASSROOM,
+            key = "#instructorUserId",
+            unless = "#result.isEmpty()"
+    )
     public List<Classroom> findByInstructorUserId(UUID instructorUserId) {
         return jpaClassroomRepository.findByInstructorUserId(instructorUserId)
             .stream()
             .map(ClassroomMapper::toDomain)
-            .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<Classroom> findAllById(List<UUID> classroomIds) {
         List<ClassroomEntity> entities = jpaClassroomRepository.findAllById(classroomIds);
-        return entities.stream().map(ClassroomMapper::toDomain).toList();
+        return entities.stream().map(ClassroomMapper::toDomain).collect(Collectors.toList());
     }
 
     @Override
+    @Cacheable(value = CacheNames.CLASSROOM_BY_ID, key = "#classroomId", unless = "#result.isEmpty()")
     public Optional<Classroom> findByClassroomId(UUID classroomId) {
         return jpaClassroomRepository.findById(classroomId).map(ClassroomMapper::toDomain);
     }
 
     @Override
+    @Cacheable(value = CacheNames.CLASSROOM_SETTINGS, key = "#classroomId", unless = "#result.isEmpty()")
     public Optional<ClassroomSettings> findSettingsByClassroomId(UUID classroomId) {
         return jpaClassroomSettingsRepository.findByClassroomId(classroomId)
             .map(ClassroomSettingsMapper::toDomain);
